--- a/902/902.html
+++ b/902/902.html
@@ -1,6 +1,6 @@
 <div data-role="page" data-theme="a" id="hi902" >
 
-<div data-role="header" data-id="header"   data-position="fixed" ><h1>HI902C</h1>
+<div data-role="header"  data-position="fixed" ><h1>HI902C</h1>
 
 <a href="#" class="ui-icon-alt panelOpen" data-icon="bars" data-iconpos="notext">Menu</a>
 
@@ -38,8 +38,8 @@ The HI902C complies with GLP specifications. All GLP information from each sampl
 </div>
 
 </div><!--end content-->
-<div data-role="footer" data-id="footer" data-position="fixed">
-<div data-role="navbar">
+<div data-role="footer" data-id="footer" data-position="fixed" data-update-page-padding="false">
+<div data-role="navbar" data-id="navbar">
 <ul>
 <li class="nav"><a class="ui-btn-active ui-state-persist" href="#" data-icon="360" data-transition="slidefade">360&deg;</a></li>
 <li class="nav"><a href="a1.html"   data-icon="burret" data-transition="slidefade">Features</a></li>
