--- a/902/a1.html
+++ b/902/a1.html
@@ -1,5 +1,5 @@
 <div data-role="page" data-theme="a" id="a1">
-	<div data-role="header" data-id="header" data-position="fixed">
+	<div data-role="header" data-position="fixed">
 		<h1>HI902C</h1>
 
 		<a href="#" data-icon="arrow-l" class="ui-icon-alt prevSlide">Previous</a>
@@ -9,7 +9,7 @@
 	</div>
 	<div role="main" class="ui-content has-header has-footer">
 
-		<div class="swiper-container swiper902">
+		<div class="swiper-container swiper">
 
 			<div class="swiper-wrapper">
 
@@ -97,8 +97,8 @@
 	</div>
 	<!--end content-->
 
-	<div data-role="footer" data-id="footer" data-position="fixed">
-		<div data-role="navbar">
+	<div data-role="footer" data-id="footer" data-position="fixed" data-update-page-padding="false">
+		<div data-role="navbar" data-id="navbar">
 			<ul>
 				<li class="nav">
 					<a href="902.html" data-icon="360" data-transition="slidefade" data-direction="reverse">360&deg;</a>
