--- a/index.html
+++ b/index.html
@@ -27,42 +27,126 @@
 	<div data-role="page" id="a">
 
 
-		<div data-role="header" data-position="fixed">
-			<h1>Hanna Instruments</h1>
-		</div>
+		<div data-role="header"	 data-position="fixed">
+		<h1>HI902C</h1>
 
+		<a href="#" data-icon="arrow-l" class="ui-icon-alt prevSlide">Previous</a>
 
-		<div role="main" class="ui-content has-header has-footer">
-			page 2
-		</div>
-		<!-- /content -->
-
-
-		<div data-role="footer" data-position="fixed">
-
-			<div data-role="navbar">
-				<ul>
-					<li class="nav">
-						<a href="#home" data-icon="360" data-transition="none">360&deg;</a>
-					</li>
-					<li class="nav">
-						<a class="ui-btn-active ui-state-persist" data-icon="burret" data-transition="none">Features</a>
-					</li>
-					<li class="nav">
-						<a data-icon="usb" data-transition="none">Data</a>
-					</li>
-					<li class="nav">
-						<a data-icon="button" data-transition="none">Nav</a>
-					</li>
-					<li class="nav">
-						<a data-icon="inout" data-transition="none">I/O</a>
-					</li>
-				</ul>
-			</div>
-
-		</div>
+		<a href="#" data-icon="arrow-r" data-iconpos="right" class="ui-icon-alt nextSlide">Next</a>
 
 	</div>
+	<div role="main" class="ui-content has-header has-footer">
+
+		<div class="swiper-container swiper">
+
+			<div class="swiper-wrapper">
+
+				<div class="swiper-slide">
+					<div class="product">
+						<img style="max-width:100%; max-height:100%;" src="img/Exchangeable-Burette-System.png">
+					</div>
+					<div class="info">
+						<h4 style="padding:0px;">Burettes</h4>
+						<p>Hanna&#39;s exclusive Clip-Lock Burette System allows users to exchange reagent burettes quickly and easily to perform different titrations. Also prevents cross contamination.Simply slide out burette and slide second burette into place.
+							<br>
+							<br>Burettes are available in 5, 10, and 25 ml sizes and the size is automatically recognized when inserted.The HI 902 also features a highly precise 40,000 step screw drive, piston dosing pump.
+						</p>
+						<br>
+						<br>
+
+					</div>
+					<!--end Info-->
+
+				</div>
+				<!--end Slide 1-->
+
+
+				<div class="swiper-slide">
+					<div class="product">
+						<img style="max-width:100%; max-height:100%;" src="img/positioning-Collar.png">
+					</div>
+					<div class="info">
+						<h4>Overhead Propeller Stirrer</h4>
+						<p>The overhead propeller stirrer holds sensors and dosing tip and is repositioned by an adjustable collar. The stirrer speed is controlled through the software.
+						</p>
+						<br>
+						<br>
+					</div>
+					<!--end Info-->
+
+				</div>
+				<!--end Slide 2-->
+
+
+				<div class="swiper-slide">
+					<div class="product">
+						<img style="max-width:100%; max-height:100%;" src="img/screen.png">
+					</div>
+					<div class="info">
+						<h4>Graphic LCD</h4>
+						<p>This large backlit LCD provides a configurable interface with real-time graphing of measurements, customizable on-screen reporting, and customizable titration methods.5.7"(320x240).
+						</p>
+						<br>
+						<br>
+					</div>
+					<!--end Info-->
+
+				</div>
+				<!--end Slide 2-->
+
+
+				<div class="swiper-slide" style="text-align:center;">
+
+
+
+
+					<div class="video">
+						<h4>How to Exhange Clip Lock™ Burettes</h4>
+						<video controls poster="../img/poster.png">
+							<source src="http://hannadev.com/video/burette.mp4" type="video/mp4">
+						</video>
+					</div>
+
+
+
+				</div>
+				<!--end Slide 3-->
+
+
+
+
+			</div>
+			<!--end slide wrapper-->
+
+		</div>
+		<!--end slide container-->
+
+		<div class="pagination pagination902"></div>
+	</div>
+	<!--end content-->
+
+	<div data-role="footer" data-position="fixed">
+		<div data-role="navbar">
+			<ul>
+				<li class="nav">
+					<a href="#home" data-icon="360" data-transition="slide" data-direction="reverse">360&deg;</a>
+				</li>
+				<li class="nav">
+					<a class="ui-btn-active ui-state-persist" href="#" data-icon="burret" data-transition="slidefade">Features</a>
+				</li>
+				<li class="nav">
+					<a href="a2.html" data-icon="usb" data-transition="slidefade">Data</a>
+				</li>
+				<li class="nav">
+					<a href="a3.html" data-icon="button" data-transition="slidefade">Nav</a>
+				</li>
+				<li class="nav">
+					<a href="a4.html" data-icon="inout" data-transition="slidefade">I/O</a>
+				</li>
+			</ul>
+		</div>
+	</div>
+</div>
 
 
 
